<resources>
    <string name="app_name">imchic</string>
    <string name="action_theme">테마변경</string>
    <string name="action_shutdown">앱종료</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>

    <string name="next">다음</string>
    <string name="previous">이전</string>

    <string name="testStr">Hello World !!!</string>

    <string name="alert_permission_warring_title">앱을 이용하기 위해
    \n 다음의 앱 권한을 허용해주세요.
    </string>

    <string name="alert_permission_chk">앱 권한이 거부되었습니다.
    \n 설정에서 <font color='#FF0000'>권한</font>을 허용해주세요.</string>

    <string name="alert_permission_title_1">기기정보 (필수)</string>
    <string name="alert_permission_sub_1">단말기 위변조 탐지 솔루션 제공시 필요</string>

    <string name="alert_permission_title_2">저장공간 (선택)</string>
    <string name="alert_permission_sub_2">사진 저장 기능을 제공시 필요</string>
    <string name="alert_permission_title_3">위치정보 (선택)</string>
    <string name="alert_permission_sub_3">위치기반 서비스 제공시 필요</string>
    <string name="alert_permission_title_4">카메라 (선택)</string>
    <string name="alert_permission_sub_4">위치기반 서비스 제공시 필요</string>
    <string name="alert_permission_infotext">선택적 권한은 서비스 사용 중
        \n 필요한 시점에 동의를 받고 있습니다.</string>

    <string name="settings_mode_theme">settings_mode_theme</string>

    <string name="developer_mode_server_url">developer_mode_server_url</string>
    <string name="developer_mode_user_info">developer_mode_user_info</string>
    <string name="developer_mode_device_info">developer_mode_device_info</string>

    <string name="developer_mode_server_seturl">developer_mode_server_seturl</string>

    <string name="developer_mode_user_hash_id">developer_mode_user_hash_id</string>
    <string name="developer_mode_user_api_token">developer_mode_user_api_token</string>
    <string name="developer_mode_user_uuid">developer_mode_user_uuid</string>
    <string name="developer_mode_user_push_token">developer_mode_user_push_token</string>

    <string name="developer_mode_device_version_name">developer_mode_device_version_name</string>
    <string name="developer_mode_device_model_name">developer_mode_device_model_name</string>
    <string name="developer_mode_device_manufacturer">developer_mode_device_manufacturer</string>
    <string name="developer_mode_app_version_name">developer_mode_app_version_name</string>
    <string name="developer_mode_screen_size">developer_mode_screen_size</string>
    <string name="developer_mode_screen_destiny">developer_mode_screen_destiny</string>
    <string name="developer_mode_screen_width">developer_mode_screen_width</string>

    <string-array name="themeArr">
        <item>밝은 테마</item>
        <item>어두운 테마</item>
        <item>시스템 테마</item>
    </string-array>

    <string-array name="devModeHead">
        <item>서버</item>
        <item>사용자 정보</item>
        <item>기기 정보</item>
    </string-array>

    <string-array name="devModeSub">
        <item>테스트 서버 설정</item>
        <item>접속한 사용자 정보</item>
        <item>테스트중인 기기에 대한 여러 정보</item>
    </string-array>

</resources>