<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="48dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            android:fontFamily="@font/custom_font_family"
            android:gravity="center"
            android:padding="16dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/alert_permission_warring_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permissionlayout1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider"
            tools:layout_editor_absoluteX="24dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_phone_iphone_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?android:attr/colorPrimaryDark"
                android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/nsquarebold"
            android:text="@string/alert_permission_title_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nsquareregular"
            android:text="@string/alert_permission_sub_1"
            android:textColor="?attr/colorOutline"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permissionlayout2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="@+id/permissionlayout1"
            app:layout_constraintStart_toStartOf="@+id/permissionlayout1"
            app:layout_constraintTop_toBottomOf="@+id/permissionlayout1">

            <ImageView
                android:id="@+id/permissionlayout2_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_collections_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?android:attr/colorPrimaryDark"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/permissionlayout2_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/nsquarebold"
                android:text="@string/alert_permission_title_2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/permissionlayout2_imageView"
                app:layout_constraintStart_toEndOf="@+id/permissionlayout2_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/permissionlayout2_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nsquareregular"
                android:text="@string/alert_permission_sub_2"
                android:textColor="?attr/colorOutline"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/permissionlayout2_textView2"
                app:layout_constraintTop_toBottomOf="@+id/permissionlayout2_textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permissionlayout3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="@+id/permissionlayout2"
            app:layout_constraintStart_toStartOf="@+id/permissionlayout2"
            app:layout_constraintTop_toBottomOf="@+id/permissionlayout2">

            <ImageView
                android:id="@+id/permissionlayout3_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:src="@drawable/ic_baseline_place_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?android:attr/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/permissionlayout3_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/nsquarebold"
                android:text="@string/alert_permission_title_3"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/permissionlayout3_imageView"
                app:layout_constraintStart_toEndOf="@+id/permissionlayout3_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/permissionlayout3_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nsquareregular"
                android:text="@string/alert_permission_sub_3"
                android:textColor="?attr/colorOutline"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/permissionlayout3_textView2"
                app:layout_constraintTop_toBottomOf="@+id/permissionlayout3_textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permissionlayout4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="@+id/permissionlayout3"
            app:layout_constraintStart_toStartOf="@+id/permissionlayout3"
            app:layout_constraintTop_toBottomOf="@+id/permissionlayout3">

            <ImageView
                android:id="@+id/permissionlayout4_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:src="@drawable/ic_baseline_photo_camera_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?android:attr/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/permissionlayout4_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/nsquarebold"
                android:text="@string/alert_permission_title_4"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/permissionlayout4_imageView"
                app:layout_constraintStart_toEndOf="@+id/permissionlayout4_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/permissionlayout4_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nsquareregular"
                android:text="@string/alert_permission_sub_4"
                android:textColor="?attr/colorOutline"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/permissionlayout4_textView2"
                app:layout_constraintTop_toBottomOf="@+id/permissionlayout4_textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:checkable="true"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            app:cardBackgroundColor="?attr/colorSurface"
            app:layout_constraintDimensionRatio="5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/permissionlayout4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nsquarelight"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/alert_permission_infotext" />

        </com.google.android.material.card.MaterialCardView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_permission"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:lottie_scale="@integer/material_motion_duration_long_1"
            app:lottie_autoPlay="true"
            app:lottie_fileName="115832-wait-i-am-loading.json"
            app:lottie_loop="true" />

        <Button
            android:id="@+id/permissionlayout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="확인"
            android:layout_margin="24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>